--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ section{
 	height: 1.8rem;
 	background-color: lightgrey;
 	border-radius: 2rem;
-	border: 2px solid grey;
+/* 	border: 2px solid grey; */
 	/*text-align: center;*/
 	/*padding: 2px;*/
 	margin-left: 20px;
