--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ body{
     padding: 10px;
     width: 70%;
     text-align: justify;
-    color: grey;
+    color: black;
     line-height: 28px;
     font-size: 1.1em;
     margin: auto;
@@ -117,10 +117,10 @@ li {
 }
 
 section:nth-child(2n){
-	background-color: lightgrey;
+	background-color: white;
 }
 section:nth-child(2n+1){
-	background-color: white;
+	background-color: lightgrey;
 }
 
 section{
