--- a/style.css
+++ b/style.css
@@ -19,11 +19,12 @@ body{
 .horizontal-list{
 	list-style: none;
 	padding-left: 0px;
+	margin: 0px;
 	font-size: 26px;
 }
 
 .horizontal-list li{
-	margin: 8px 10px 10px 0px;
+	margin: 12px 10px 10px 0px;
 	display: inline-block;
 	font-weight: 100;
 	font-size: 1.4rem;
@@ -36,7 +37,7 @@ body{
 }
 
 .nav-menu li a{
-	transition: color 0.5s, border-bottom 4s;
+	transition: color 0.6s, border-bottom 4s;
 }
 
 .nav-menu li a:hover{
@@ -57,7 +58,11 @@ body{
 	text-align: center;
 }
 
+
+/* social icons styling*/
+
 .social-icons li{
+	display: inline-block;
 	margin-top: -30px;
 }
 
@@ -68,11 +73,21 @@ body{
 	padding: 10px;
 }
  
-.social-icons li a:hover{
-	color: red;
-/*	box-shadow: 0px 0px 6px 4px grey;*/
+.social-icons img:hover{
+	color: grey;
+	box-shadow: 1px 1px 10px 5px whitesmoke;
+}
+.social-icons li a img {
+    color: black;
+    /*padding: 5px;*/
+    font-size: 1rem;
+    height: 38px;
+    width: 38px;
+    color: black;
+    border-radius: 50%;
 }
 
+/* about section styling*/
 #about{
 	height: auto;
 	width: 100%;
@@ -112,15 +127,15 @@ body{
     font-size: 1.1em;
     margin: auto;
 }
-li {
-    text-align: -webkit-match-parent;
-}
 
+
+
+/* alternative section ka color change*/
 section:nth-child(2n){
 	background-color: white;
 }
 section:nth-child(2n+1){
-	background-color: lightgrey;
+	background-color: #9e9b9b29;
 }
 
 section{
@@ -144,14 +159,16 @@ section{
 	margin-right: 0.5rem;
 }
 
+/* skill styling*/
+
 .section-heading #skills-image-margin {
 	margin-right: -10px;	
 }
 
 .skills-display{
 	width: 70%;
-	/*height: 100px;
-	border: 2px solid black;*/
+	/*height: 100px;*/
+	/*border: 2px solid black;*/
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
@@ -162,8 +179,8 @@ section{
 	width: 10rem;
 	height: 1.8rem;
 	background-color: lightgrey;
-	border-radius: 2rem;
-/* 	border: 2px solid grey; */
+	border-radius: 1rem;
+	/*border: 2px solid grey;*/
 	/*text-align: center;*/
 	/*padding: 2px;*/
 	margin-left: 20px;
@@ -171,6 +188,7 @@ section{
 }
 
 /* skills ke background color*/
+
 .mb-blue{
 	background-color: blue;
 }
@@ -196,10 +214,11 @@ section{
 .mb-purple{
 	background-color: purple;
 }
-.skill-name span{
+.skill-name {
 	color: white;
 	font-size: 1rem;
-	margin-left: 5px;
+	padding-left: 8px;
+	padding-top: 4px;
 }
 
 .skill-progress>div{
@@ -209,6 +228,7 @@ section{
 
 
 /* percentage classes*/
+
 .eigthy-five-precent{
 	width: 85%;
 	height: inherit;
@@ -236,4 +256,249 @@ section{
 .twenty-precent{
 	width: 20%;
 	height: inherit;
+}
+
+/* Education alternative box section  styling*/
+
+.timeline
+{
+	position: relative;
+	width: 60vw;
+	/*border: 2px solid black;*/
+}
+
+.timeline-box{
+	position: relative;
+	width: 40%;
+	left: 5%;
+	min-height: 150px;
+	/*border: 2px solid black;*/
+	margin: 5px;
+}
+
+.timeline-box:nth-child(2n){
+	left: 53%;
+}
+
+/*/ to bring dots to center*/
+
+.timeline-box:nth-child(2n+1)::after	/* odd div me left se right lana hai */
+{
+	content: '';		/* content is must chahe do ya na do*/
+	border-radius: 50%; /* because we want round dots*/
+	width: 0.5rem;
+	right: -13%;		/* middle me lane ke leye plane ke*/
+	position: absolute;
+	top: 25%;
+	height: 0.5rem;
+	background-color: red;
+	z-index: 1;
+
+}
+
+.timeline-box:nth-child(2n)::after		/* even div me right se left lana hai */
+{
+	content: '';		/* content is must chahe do ya na do*/
+	border-radius: 50%; /* because we want round dots*/
+	width: 0.5rem;
+	left: -9%;		/* middle me lane ke leye plane ke*/
+	position: absolute;
+	top: 25%;
+	height: 0.5rem;
+	background-color: red;
+	z-index: 1;
+
+
+}
+
+/* border plane wla*/
+.timeline-divider{
+	position: absolute;
+	height: 75%;
+	width: 0;
+	border: 3px dashed #0096fa6b;
+	top: 10%;
+	left: 50%;
+}
+
+/* plane*/
+.timeline-traveller{
+	position: sticky;
+	top: 30%;
+	transform: rotate(90deg);
+	z-index: 2;
+}
+
+/*education content styling*/
+
+.timeline-logo{
+	position: absolute;
+	width: 100px;
+	overflow: hidden;
+}
+
+.cls-font{
+	font-size: 1.4rem;
+}
+
+.school{
+	margin: 5px 0 0;
+    color: #eb822d;
+    font-weight: 400;
+    font-size: 1.2rem;
+}
+h4 {
+    display: block;
+    font-weight: bold;
+    text-align: right;
+    padding-right: 10px;
+   /* margin-top: 10px;*/
+}
+
+h3 {
+    display: block;
+    font-size: 1.17em;
+    text-align: right;
+    font-weight: bold;
+     padding-right: 10px;
+     margin-bottom: 0px;
+
+}
+
+.school-description {
+    font-size: 14px;
+    padding: 2px;
+    color: grey;
+    line-height: 20px;
+}
+
+.text-align-justify {
+    text-align: justify;
+}
+
+.duration
+{
+	    color: #9e9b9b;
+    font-weight: 100;
+    color: grey;
+    font-size: 1rem;
+}
+
+h5{
+	display: block;
+    font-size: 1rem;
+    font-weight: bold;
+    text-align: right;
+   margin-top: 0px;
+
+}
+
+.text-align-center{
+	text-align: center;
+}
+
+
+/* contact styling*/
+
+#contact {
+    background-color: #0abcf9;
+    background-image: linear-gradient(50deg, #2857a4 0%, #403066 74%);
+    color: white;
+    padding-bottom: 40px;
+}
+
+#contact h1 span {
+    color: white;
+}
+
+.contact-container{
+	display: flex;
+}
+
+#form {
+    display: block;
+    margin-top: 0em;
+}
+
+#contact-form {
+    margin-left: 20%;
+}
+
+#contact-form input, textarea {
+    max-width: 90%;
+    margin: 15px;
+    padding: 4px 10px;
+    border: 0px solid transparent;
+    border-bottom: 2px solid white;
+    color: #d9dcdd;
+    background: transparent;
+    width: 90%;
+    line-height: 1.6;
+    font-size: 1.05rem;
+}
+
+.color-mail
+{
+	color: lightblue;
+}
+.button-submit {
+    background: transparent;
+    font-size: 0.95rem;
+    border: 2px solid white;
+    margin-top: 5%;
+    margin-left: 3%;
+    border-radius: 2px;
+    color: white;
+    font-family: sans-serif;
+    font-weight: 700;
+    line-height: 1;
+    padding: 0.8em 0.8em 0.78em;
+    text-transform: uppercase;
+}
+
+#contact-form button:hover{
+	background-color: white;
+	color: darkblue;
+}
+
+.contact-container-form{
+    width: 50%;
+}
+
+.my-details-container {
+    width: 35%;
+    margin-left: 6%;
+}
+
+.my-details-container h3 {
+    color: white;
+    font-weight: 550;
+    font-size: 1.2rem;
+    text-align: left;
+}
+
+.get-in-touch {
+    font-family: sans-serif;
+    font-weight: 600;
+}
+
+.my-details-container-info{
+	    margin-bottom: 20px;
+    color: #d9dcdd;
+    font-size: 1rem;
+}
+
+h3 {
+    display: block;
+    font-size: 1.17em;
+    margin-bottom: 15px;
+    font-weight: bold;
+}
+
+
+/* footer styling*/
+footer p{
+	font-size: 15px;
+	margin-top: 20px;
+	padding-bottom: 0;
 }
